# FundLoad

./: .gitignore  PROJECT_REVIEW.md  README.md  pyproject.toml  requirements.txt
examples/: comprehensive_test.txt  comprehensive_test_explanation.md  expected_output.txt  expected_output_comprehensive.txt  sample_input.csv  sample_input.txt  test_anomaly.csv  test_prime_ids.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx
frontend/src/components/: DashboardLayout.jsx  LoginPage.jsx
frontend/src/pages/: HomePage.jsx  OutputsPage.jsx  SettingsPage.jsx
frontend/src/utils/: api.js  debugAlerts.js
fund_load_adjudicator/: __init__.py  cli.py
fund_load_adjudicator/api/: __init__.py  server.py
fund_load_adjudicator/core/: __init__.py  models.py  processor.py  rules.py  validators.py
tests/: __init__.py  test_core.py
